--- a/README
+++ b/README
@@ -28,5 +28,6 @@ PAL项目
 	6-3 heading h1
 	6-4 img:title alt
 	6-5 nav (基于html的实现)
-7、引入设计字体，采用css3的vw（单位），来做字体的自适应，目前浏览器都支持
+7、引入设计字体，采用css3的vw（单位），来做字体的自适应，目前浏览器都支持，确定是字体文件太多，需要进行裁剪，
+	目前只能裁剪系统字体文件
 
