加入图片加载判断

--- a/README
+++ b/README
@@ -28,6 +28,10 @@ PAL项目
 	6-3 heading h1
 	6-4 img:title alt
 	6-5 nav (基于html的实现)
-7、引入设计字体，采用css3的vw（单位），来做字体的自适应，目前浏览器都支持，确定是字体文件太多，需要进行裁剪，
-	目前只能裁剪系统字体文件
+7、引入设计字体，采用css3的vw（单位），来做字体的自适应，目前浏览器都支持。问题是字体文件太大，需要进行裁剪。
+	目前只能裁剪系统字体文件（华文彩云，命名时不要用中文，在linux下会获取不到文件）
+8、处理图片加载的问题，只要考虑两点：
+	1）如果没有缓存（初次加载的情况），load回调，用one绑定，避免重复触发
+	2）缓存读取图片(根据img.complete来判断。触发load事件）
+	此外，两张图片的一起的时候的组合考虑（ad.js）
 
